<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_pink"
    tools:context="com.sorashiro.calculator.MainActivity">

    <Button
        android:id="@+id/btn_config"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/btn_config_margin"
        android:layout_marginStart="@dimen/btn_config_margin"
        android:layout_marginTop="@dimen/btn_config_margin"
        android:background="@drawable/config_pink"
        />

    <EditText
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_btns"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="@dimen/text_lr_margin"
        android:layout_marginLeft="@dimen/text_lr_margin"
        android:layout_marginRight="@dimen/text_lr_margin"
        android:layout_marginStart="@dimen/text_lr_margin"
        android:background="@null"
        android:cursorVisible="false"
        android:focusable="false"
        android:gravity="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/result_area"
        android:textColor="@color/pink_secondary_text"
        android:textColorHint="@color/pink_secondary_text"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/text_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_result"
        android:layout_below="@id/btn_config"
        android:layout_marginEnd="@dimen/text_lr_margin"
        android:layout_marginLeft="@dimen/text_lr_margin"
        android:layout_marginRight="@dimen/text_lr_margin"
        android:layout_marginStart="@dimen/text_lr_margin"
        android:fadeScrollbars="false"
        android:gravity="bottom|end"
        android:hint="@string/enter_area"
        android:scrollbars="vertical"
        android:textColor="@color/pink_secondary_text"
        android:textColorHint="@color/pink_secondary_text"
        android:textSize="50sp"/>

    <LinearLayout
        android:id="@+id/layout_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/btn_divider_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_left_p"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/left_p"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_right_p"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/right_p"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_del"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/del"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_c"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/c"
                android:textColor="@color/pink_btn_text"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/btn_divider_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_1"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_2"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_3"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/divide"
                android:textColor="@color/pink_btn_text"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/btn_divider_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_4"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_5"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_6"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_multi"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/multi"
                android:textColor="@color/pink_btn_text"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/btn_divider_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="@color/pink_btn_text">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_7"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_8"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_9"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/sub"
                android:textColor="@color/pink_btn_text"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/btn_divider_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/_0"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/dot"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/equal"
                android:textColor="@color/pink_btn_text"/>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/btn_divider2_white"/>

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:background="@drawable/btn_background_pink"
                android:text="@string/plus"
                android:textColor="@color/pink_btn_text"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
